# _660_mergers

./: README.md  setup.cfg
_660_mergers/: collect_secondgrade_followers.py
p660/: _best_match.py  _copy_db.py  _find_relevant_followers.py  _plot.py  _simple_request.py  _split_followers.py  _tmp.py  collect_ff.py  collect_followers_list.py  collect_fws.py  collect_secondgrade_followers.py  simple_request.py  untitled1.py  untitled2.py  utils.py
