[metadata]
name = p660
version = 1.0.1
long_description = file: README.md
license = MIT

[options]
packages =
	p660
install_requires =
	JSONWrap @ git+https://github.com/AlessandroVisintin/JSONWrap.git
	StorageUtils @ git+https://github.com/AlessandroVisintin/StorageUtils.git
	WebUtils @ git+https://github.com/AlessandroVisintin/WebUtils.git

[options.packages.find]
#exclude =
#	tests*
